:bug: Fix Firefox scrollbar ui

--- a/src/components/pages/index/Writings/styles.module.css
+++ b/src/components/pages/index/Writings/styles.module.css
@@ -5,22 +5,23 @@
   flex-wrap: nowrap!important;
   overflow-x: scroll;
   scroll-snap-type: x mandatory;
+  scrollbar-color: var(--textSecondary) transparent;
 }
 
 .scrollablePosts:global(::-webkit-scrollbar) {
   -webkit-appearance: none;
-  height: .5em;
+  height: .5rem;
 }
 
 .scrollablePosts:global(::-webkit-scrollbar-thumb) {
-  border-radius: 4px;
+  border-radius: .25rem;
   background-color: var(--textSecondary);
 }
 
 .scrollablePosts:global(::-webkit-scrollbar-track) {
-  border-radius: 4px;
+  border-radius: .25rem;
   box-shadow: 0 1px 4px var(--shadowColor);
-  margin: 0 1.15em;
+  margin: 0 1.15rem;
 }
 
 @media (prefers-color-scheme: dark) {
